.provarCaches/00D410000011HE0EAM/objects/rstkf__arcuststmt3__c.object
<CustomObject>
    <description>arcuststmt3__c</description>
    <fields>
        <fullName>rstkf__altextid__c</fullName>
        <externalId>true</externalId>
        <label>altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt3_age1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Open Balance  0-30 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt3_age2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Open Balance  31-60 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt3_age3__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Open Balance  61-90 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt3_arcuststmt2__c</fullName>
        <label>AR Statements Session Customer</label>
        <referenceTo>rstkf__arcuststmt2__c</referenceTo>
        <relationshipLabel>AR Statements Customer Headers</relationshipLabel>
        <relationshipName>arcuststmt3s</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt3_bodytext__c</fullName>
        <label>Statement Body Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt3_calcfinchg__c</fullName>
        <label>Calculated Finance Charge</label>
        <summarizedField>rstkf__arcuststmt4__c.rstkf__arcuststmt4_finchgamt__c</summarizedField>
        <summaryForeignKey>rstkf__arcuststmt4__c.rstkf__arcuststmt4_arcuststsmt3__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt3_city__c</fullName>
        <label>Statement Header Address City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt3_companylogo__c</fullName>
        <description>arcuststmt3_companylogo__c</description>
        <inlineHelpText>This is your Company Logo for use on external documents (PO, SO Acknowledgement, SO Invoice, Packing Slip, etc). The logo is uploaded to your SF Org, in a Documents folder, the document URL is then pasted here. The Logo Scale can be used to resize it.</inlineHelpText>
        <label>Company Logo for External Documents</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt3_country__c</fullName>
        <label>Statement Header Address Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt3_currentbalmessage__c</fullName>
        <description>arcuststmt3_currentbalmessage__c</description>
        <inlineHelpText>Text used for statements showing non-zero but current-balances</inlineHelpText>
        <label>Current-Balance Statement Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt3_finchg__c</fullName>
        <label>Total Finance Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt3_finchgcalc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finance Charge Calculated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt3_finchgtextline__c</fullName>
        <label>Finance Charge Text Line</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt3_headerline1__c</fullName>
        <label>Statement Header Text Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt3_headerline2__c</fullName>
        <label>Statement Header Text Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt3_headerline3__c</fullName>
        <label>Statement Header Text Line 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt3_pdf_file__c</fullName>
        <label>PDF File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt3_state__c</fullName>
        <label>Statement Header Address State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt3_zip__c</fullName>
        <label>Statement Header Address Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__arcuststmt3_arcuststmt2__r.rstkf__externalid__c</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__arcuststmt3_arcuststmt2__r.Name</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>AR Statements Customer Header</label>
    <listViews>
        <fullName>rstkf__All</fullName>
        <columns>NAME</columns>
        <columns>rstkf__arcuststmt3_age1__c</columns>
        <columns>rstkf__arcuststmt3_age5__c</columns>
        <columns>rstkf__arcuststmt3_age2__c</columns>
        <columns>rstkf__arcuststmt3_age3__c</columns>
        <columns>rstkf__arcuststmt3_age4__c</columns>
        <columns>rstkf__arcuststmt3_pdf_file__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstkf__arcuststmt3_arcuststmt2__c</columns>
        <columns>rstkf__arcuststmt3_finchg__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_AR_Statements_Customer_Headers</fullName>
        <columns>NAME</columns>
        <columns>rstkf__arcuststmt3_arcuststmt2__c</columns>
        <columns>rstkf__arcuststmt3_finchgcalc__c</columns>
        <columns>rstkf__arcuststmt3_finchgtextline__c</columns>
        <columns>rstkf__arcuststmt3_headerline1__c</columns>
        <columns>rstkf__arcuststmt3_headerline2__c</columns>
        <columns>rstkf__arcuststmt3_headerline3__c</columns>
        <columns>rstkf__arcuststmt3_headerline4__c</columns>
        <columns>rstkf__arcuststmt3_finchg__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>AR Statements Customer Headers</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AR Statements Customer Headers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>